# vslam

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  TODO.md
.devcontainer/: devcontainer.json
config/: NodeMapping.yaml  RgbdAlignmentNode.yaml  nodeMapping.yaml  node_config.yaml
config/rviz/: odom_eval.rviz
include/vslam_ros/: converters.h  vslam_ros.h
launch/: evaluation.launch.py
script/: evaluate.py
script/vslam_evaluation/: dataset.py
src/ros/: converter.cpp
src/vslam/: CMakeLists.txt
src/vslam/include/vslam/: vslam.h
src/vslam/script/: derivation_rgbd_alignment.py  direct_icp.py
src/vslam/script/experiments/: evaluate_direct_icp.py  main_tum.py  show_tum.py
src/vslam/script/vslampy/: dataset.py
src/vslam/script/vslampy/dataset/: dataset.py  tum.py
src/vslam/script/vslampy/direct_icp/: direct_icp.py  overlay.py  weights.py
src/vslam/script/vslampy/evaluation/: dataset.py  evaluation.py  kitty.py  tum.py
src/vslam/script/vslampy/plot/: parse_performance_log.py  plot_log_residual.py  plot_log_weights.py  plot_logs.py  plot_traj.py
src/vslam/script/vslampy/utils/: utils.py
src/vslam/src/app/: CMakeLists.txt
src/vslam/src/app/src/: main_dvo_compare.cpp  main_tum.cpp  main_tum_dvo.cpp
src/vslam/src/core/: CMakeLists.txt  Pose.h  types.h
src/vslam/src/core/include/core/: core.h
src/vslam/src/core/script/: t_distribution.py
src/vslam/src/core/src/: Camera.cpp  Camera.h  Feature2D.cpp  Feature2D.h  Frame.cpp  Frame.h  Point3D.cpp  Point3D.h  PoseWithCovariance.cpp  PoseWithCovariance.h  Trajectory.cpp  Trajectory.h  algorithm.cpp  algorithm.h  image_transform.h  linalg.cpp  linalg.h  random.cpp  random.h  types.h
src/vslam/src/core/test/: test_frame.cpp
src/vslam/src/direct_icp/: DirectIcp.cpp  DirectIcp.h  DirectIcpOverlay.cpp  DirectIcpOverlay.h
src/vslam/src/evaluation/: CMakeLists.txt  tum.cpp
src/vslam/src/evaluation/include/evaluation/: evaluation.h
src/vslam/src/evaluation/src/: PlotTrajectory.cpp  PlotTrajectory.h  RelativePoseError.cpp  RelativePoseError.h
src/vslam/src/kalman/: CMakeLists.txt
src/vslam/src/kalman/include/kalman/: kalman.h
src/vslam/src/kalman/src/: EKFConstantVelocitySE3.cpp  EKFConstantVelocitySE3.h
src/vslam/src/least_squares/: CMakeLists.txt
src/vslam/src/least_squares/src/: GaussNewton.cpp  GaussNewton.h  Loss.h  NormalEquations.cpp  NormalEquations.h  PlotSolver.cpp  PlotSolver.h  Prior.h  Scaler.cpp  Solver.cpp  Solver.h
src/vslam/src/least_squares/test/: test_loss.cpp
src/vslam/src/lukas_kanade/: CMakeLists.txt
src/vslam/src/lukas_kanade/include/lukas_kanade/: lukas_kanade.h
src/vslam/src/lukas_kanade/src/: ForwardAdditive.cpp  ForwardAdditive.h  InverseCompositional.cpp  InverseCompositional.h  InverseCompositionalStacked.cpp  InverseCompositionalStacked.h  Warp.cpp  Warp.h
src/vslam/src/lukas_kanade/test/: test_warp.cpp
src/vslam/src/mapping/: CMakeLists.txt  README.md
src/vslam/src/mapping/include/mapping/: mapping.h
src/vslam/src/mapping/src/: KeyFrameSelection.cpp  KeyFrameSelection.h  Map.cpp  Map.h
src/vslam/src/odometry/: CMakeLists.txt
src/vslam/src/odometry/cfg/log/: tracking.conf
src/vslam/src/odometry/include/odometry/: odometry.h
src/vslam/src/odometry/script/: direct_icp.py  main_tum.py
src/vslam/src/odometry/script/direct_icp/: camera.py  direct_icp.py  main_tum.py  overlay.py  utils.py  weights.py
src/vslam/src/odometry/src/: KeyFrameSelection.cpp  KeyFrameSelection.h  MotionModel.h  Odometry.cpp  Odometry.h
src/vslam/src/odometry/src/direct_image_alignment/: RgbdAlignmentOpenCv.h  SE3Alignment.cpp
src/vslam/src/odometry/src/feature_tracking/: FeaturePlot.cpp  FeaturePlot.h  FeatureTracking.cpp  FeatureTracking.h  FeatureTrackingOcv.cpp  Matcher.cpp  Matcher.h  MatcherBruteForce.cpp  MatcherBruteForce.h  OverlayFeatureDisplacement.cpp  OverlayFeatureDisplacement.h
src/vslam/src/odometry/src/iterative_closest_point/: IterativeClosestPoint.h  IterativeClosestPointOcv.h
src/vslam/src/odometry/src/mapping/: BundleAdjustment.cpp  BundleAdjustment.h  Map.cpp  Map.h  MapOptimization.cpp  MapOptimization.h
src/vslam/src/odometry/src/motion_model/: EKFConstantVelocitySE3.cpp  EKFConstantVelocitySE3.h  MotionModel.cpp  MotionModel.h  PlotKalman.cpp  PlotKalman.h
src/vslam/src/odometry/src/rgbd_alignment/: DirectIcp.cpp  DirectIcp.h  IterativeClosestPoint.cpp  IterativeClosestPoint.h  LukasKanadeWithDepth.cpp  LukasKanadeWithDepth.h  MotionPrior.cpp  MotionPrior.h  Overlays.cpp  Overlays.h  PlotAlignment.cpp  PlotAlignment.h  RgbdAligner.cpp  RgbdAligner.h  RgbdAlignment.cpp  RgbdAlignment.h  RgbdAlignmentIcp.cpp  RgbdAlignmentIcp.h  RgbdAlignmentOcv.cpp  RgbdAlignmentOcv.h  RgbdAlignmentOpenCv.h  RgbdAlignmentRgb.cpp  RgbdAlignmentRgb.h  SE3Alignment.cpp  SE3Alignment.h
src/vslam/src/odometry/test/: test_alignment_se3.cpp  test_alignment_se3_multi_frame.cpp  test_ba.cpp  test_map.cpp  test_odometry.cpp  test_odometry_icp.cpp  test_odometry_rgbd_cv.cpp  test_tracking.cpp
src/vslam/src/utils/: CMakeLists.txt  log.cpp  log.h
src/vslam/src/utils/include/utils/: utils.h
src/vslam/src/utils/src/: Log.cpp  Log.h  tum.cpp  tum.h  utils.cpp  visuals.cpp  visuals.h
src/vslam/src/utils/test/: test_log.cpp
src/vslam/src/vslam/: CMakeLists.txt
src/vslam/src/vslam/include/vslam/: vslam.h
src/vslam/src/vslam/src/: Camera.cpp  Camera.h  DirectIcp.cpp  DirectIcp.h  Pose.cpp  Trajectory.cpp  log.h  tum.cpp  tum.h  types.h  utils.cpp  utils.h  visuals.h
src/vslam/src/vslam/src/core/: Frame.cpp  Frame.h  Pose.h
src/vslam/src/vslam/src/direct_icp/: DirectIcp.cpp  DirectIcp.h
src/vslam/src/vslam/src/evaluation/: evaluation.cpp  evaluation.h  tum.cpp  tum.h
src/vslam/src/vslam/src/utils/: log.cpp  log.h  utils.h
src/vslam/test/: main_tum.cpp  test_alignment_se3.cpp  test_alignment_se3_multi_frame.cpp  test_ekf_se3.cpp  test_frame2.cpp  test_map.cpp  test_motion_model.cpp  test_rgbd_alignment.cpp  test_track_and_optimize.cpp  test_tracking.cpp  test_trajectory.cpp
src/vslam/test/resource/: rgbd_dataset_freiburg1_floor-algo.txt
(+22 files in other folders)
